# Kiosk

./: .gitignore  README.md  diagnosis_report#2.md  diagnosis_report.md  downloads.json  index.html  versioning-schema.md  viewer.html
.github/prompts/: plan-kiosk.prompt.md
.github/workflows/: README.md  build-linux.yml  build-windows.yml  build.yml  deploy.yml  release.yml  update-downloads.yml
Android/: .gitignore  README.md  bootstrap-gradle.sh  build-clean.sh  gradle.properties  gradlew  install-and-test.sh  settings.gradle.kts
Android/app/: build.gradle.kts  proguard-rules.pro
Desktop (Tauri)/Kiosk/: PHASE1_CHANGES.md  index.html  package-lock.json  package.json
Desktop (Tauri)/Kiosk/src-tauri/: Cargo.toml  build.rs  entitlements.plist  tauri.conf.json
Desktop (Tauri)/Kiosk/src-tauri/icons/: icon.icns
Desktop (Tauri)/Kiosk/src-tauri/src/: annotations.rs  commands.rs  lib.rs
Desktop (Tauri)/Kiosk/src-tauri/src/pdf/: mod.rs  renderer.rs
css/: common.css  home.css  viewer.css
extension/: README.md  manifest.json
extension/background/: service-worker.js
extension/content/: pdf-interceptor.js
extension/popup/: popup.css  popup.html  popup.js
extension/viewer/: viewer.css  viewer.html  viewer.js
js/: home.js  pdfSearchWorker.js  viewer.js
kiosk-extension/: ARCHITECTURE_FIX.md  DEEP_SCAN.md  DELIVERY.md  INDEX.md  INTEGRATION.md  QUICKSTART.md  QUICK_TEST.md  README.md  SUMMARY.md  TESTING.md  manifest.json  popup.html  viewer.html  viewer.html.backup
kiosk-extension/css/: common.css
kiosk-extension/icons/: README.md
(+75 files in other folders)
