[package]
name = "kiosk"
version = "0.1.0"
description = "High-performance PDF reader with native rendering"
authors = ["Sarthak Ghosh"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "kiosk_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# PDF rendering
pdfium-render = "0.8"
image = { version = "0.25", default-features = false, features = ["png"] }

# Async and concurrency
tokio = { version = "1", features = ["sync"] }

# Error handling
thiserror = "1"

# URL parsing for file:// URLs
url = "2"

# URL encoding/decoding for handling path special characters
urlencoding = "2"

# PDF manipulation for annotations (lopdf for writing annotations)
lopdf = "0.34"

# Base64 encoding for annotation data
base64 = "0.22"

# Date/time for annotation timestamps
chrono = "0.4"

